// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DataSourceNavigation: Component should render correctly 1`] = `
<styled.div
  hideOnDesktop={false}
>
  <styled.div>
    <styled.div
      key="0"
    >
      <Styled(Link)
        $active={true}
        disabled={false}
        to="/datasource/1/source"
      >
        <Component
          customStyles={
            Object {
              "height": 30,
              "width": 30,
            }
          }
          id="sourceBtn"
        />
      </Styled(Link)>
      <styled.div>
        <MemoizedFormattedMessage
          defaultMessage="Source"
          id="shared.components.dataSourceNavigation.source"
        />
      </styled.div>
    </styled.div>
    <styled.div
      key="1"
    >
      <Styled(Link)
        $active={false}
        disabled={true}
        to="/datasource/1/preview"
      >
        <Component
          customStyles={
            Object {
              "height": 30,
              "width": 30,
            }
          }
          id="fieldsBtn"
        />
      </Styled(Link)>
      <styled.div>
        <MemoizedFormattedMessage
          defaultMessage="Fields"
          id="shared.components.dataSourceNavigation.preview"
        />
      </styled.div>
    </styled.div>
    <styled.div
      key="2"
    >
      <Styled(Link)
        $active={false}
        disabled={true}
        to="/datasource/1/steps"
      >
        <Component
          customStyles={
            Object {
              "height": 35,
              "marginTop": 1,
              "width": 35,
            }
          }
          id="stepsBtn"
        />
      </Styled(Link)>
      <styled.div>
        <MemoizedFormattedMessage
          defaultMessage="Steps"
          id="shared.components.dataSourceNavigation.steps"
        />
      </styled.div>
    </styled.div>
    <styled.div
      key="3"
    >
      <Styled(Link)
        $active={false}
        disabled={true}
        to="/datasource/1/result"
      >
        <Component
          customStyles={
            Object {
              "height": 35,
              "marginTop": 1,
              "width": 35,
            }
          }
          id="resultsBtn"
        />
      </Styled(Link)>
      <styled.div>
        <MemoizedFormattedMessage
          defaultMessage="Results"
          id="shared.components.dataSourceNavigation.result"
        />
      </styled.div>
    </styled.div>
    <styled.div
      key="4"
    >
      <Styled(Link)
        $active={false}
        disabled={true}
        to="/datasource/1/filters"
      >
        <Component
          customStyles={
            Object {
              "height": 28,
              "width": 28,
            }
          }
          id="filtersBtn"
        />
      </Styled(Link)>
      <styled.div>
        <MemoizedFormattedMessage
          defaultMessage="Filters"
          id="shared.components.dataSourceNavigation.filters"
        />
      </styled.div>
    </styled.div>
    <styled.div
      key="5"
    >
      <Styled(Link)
        $active={false}
        disabled={true}
        to="/datasource/1/tag"
      >
        <Component
          customStyles={
            Object {
              "height": 30,
              "width": 30,
            }
          }
          id="tagsBtn"
        />
      </Styled(Link)>
      <styled.div>
        <MemoizedFormattedMessage
          defaultMessage="Tags"
          id="shared.components.dataSourceNavigation.tag"
        />
      </styled.div>
    </styled.div>
    <styled.div
      key="6"
    >
      <Styled(Link)
        $active={false}
        disabled={true}
        to="/datasource/1/state"
      >
        <Component
          customStyles={
            Object {
              "height": 30,
              "width": 30,
            }
          }
          id="statesBtn"
        />
      </Styled(Link)>
      <styled.div>
        <MemoizedFormattedMessage
          defaultMessage="States"
          id="shared.components.dataSourceNavigation.state"
        />
      </styled.div>
    </styled.div>
    <styled.div
      key="7"
    >
      <Styled(Link)
        $active={false}
        disabled={true}
        to="/datasource/1/metadata"
      >
        <Component
          customStyles={
            Object {
              "height": 30,
              "width": 30,
            }
          }
          id="metaDataBtn"
        />
      </Styled(Link)>
      <styled.div>
        <MemoizedFormattedMessage
          defaultMessage="Metadata"
          id="shared.components.dataSourceNavigation.metadata"
        />
      </styled.div>
    </styled.div>
  </styled.div>
</styled.div>
`;

exports[`DataSourceNavigation: Component should render correctly with fake job 1`] = `
<styled.div
  hideOnDesktop={false}
>
  <styled.div>
    <styled.div
      key="0"
    >
      <Styled(Link)
        $active={true}
        disabled={false}
        to="/datasource/1/source"
      >
        <Component
          customStyles={
            Object {
              "height": 30,
              "width": 30,
            }
          }
          id="sourceBtn"
        />
      </Styled(Link)>
      <styled.div>
        <MemoizedFormattedMessage
          defaultMessage="Source"
          id="shared.components.dataSourceNavigation.source"
        />
      </styled.div>
    </styled.div>
    <styled.div
      key="1"
    >
      <Styled(Link)
        $active={false}
        disabled={false}
        to="/datasource/1/preview"
      >
        <Component
          customStyles={
            Object {
              "height": 30,
              "width": 30,
            }
          }
          id="fieldsBtn"
        />
      </Styled(Link)>
      <styled.div>
        <MemoizedFormattedMessage
          defaultMessage="Fields"
          id="shared.components.dataSourceNavigation.preview"
        />
      </styled.div>
    </styled.div>
    <styled.div
      key="2"
    >
      <Styled(Link)
        $active={false}
        disabled={false}
        to="/datasource/1/steps"
      >
        <Component
          customStyles={
            Object {
              "height": 35,
              "marginTop": 1,
              "width": 35,
            }
          }
          id="stepsBtn"
        />
      </Styled(Link)>
      <styled.div>
        <MemoizedFormattedMessage
          defaultMessage="Steps"
          id="shared.components.dataSourceNavigation.steps"
        />
      </styled.div>
    </styled.div>
    <styled.div
      key="3"
    >
      <Styled(Link)
        $active={false}
        disabled={false}
        to="/datasource/1/result"
      >
        <Component
          customStyles={
            Object {
              "height": 35,
              "marginTop": 1,
              "width": 35,
            }
          }
          id="resultsBtn"
        />
      </Styled(Link)>
      <styled.div>
        <MemoizedFormattedMessage
          defaultMessage="Results"
          id="shared.components.dataSourceNavigation.result"
        />
      </styled.div>
    </styled.div>
    <styled.div
      key="4"
    >
      <Styled(Link)
        $active={false}
        disabled={false}
        to="/datasource/1/filters"
      >
        <Component
          customStyles={
            Object {
              "height": 28,
              "width": 28,
            }
          }
          id="filtersBtn"
        />
      </Styled(Link)>
      <styled.div>
        <MemoizedFormattedMessage
          defaultMessage="Filters"
          id="shared.components.dataSourceNavigation.filters"
        />
      </styled.div>
    </styled.div>
    <styled.div
      key="5"
    >
      <Styled(Link)
        $active={false}
        disabled={false}
        to="/datasource/1/tag"
      >
        <Component
          customStyles={
            Object {
              "height": 30,
              "width": 30,
            }
          }
          id="tagsBtn"
        />
      </Styled(Link)>
      <styled.div>
        <MemoizedFormattedMessage
          defaultMessage="Tags"
          id="shared.components.dataSourceNavigation.tag"
        />
      </styled.div>
    </styled.div>
    <styled.div
      key="6"
    >
      <Styled(Link)
        $active={false}
        disabled={false}
        to="/datasource/1/state"
      >
        <Component
          customStyles={
            Object {
              "height": 30,
              "width": 30,
            }
          }
          id="statesBtn"
        />
      </Styled(Link)>
      <styled.div>
        <MemoizedFormattedMessage
          defaultMessage="States"
          id="shared.components.dataSourceNavigation.state"
        />
      </styled.div>
    </styled.div>
    <styled.div
      key="7"
    >
      <Styled(Link)
        $active={false}
        disabled={false}
        to="/datasource/1/metadata"
      >
        <Component
          customStyles={
            Object {
              "height": 30,
              "width": 30,
            }
          }
          id="metaDataBtn"
        />
      </Styled(Link)>
      <styled.div>
        <MemoizedFormattedMessage
          defaultMessage="Metadata"
          id="shared.components.dataSourceNavigation.metadata"
        />
      </styled.div>
    </styled.div>
  </styled.div>
</styled.div>
`;

exports[`DataSourceNavigation: Component should render correctly with job 1`] = `
<styled.div
  hideOnDesktop={false}
>
  <styled.div>
    <styled.div
      key="0"
    >
      <Styled(Link)
        $active={true}
        disabled={false}
        to="/datasource/1/source"
      >
        <Component
          customStyles={
            Object {
              "height": 30,
              "width": 30,
            }
          }
          id="sourceBtn"
        />
      </Styled(Link)>
      <styled.div>
        <MemoizedFormattedMessage
          defaultMessage="Source"
          id="shared.components.dataSourceNavigation.source"
        />
      </styled.div>
    </styled.div>
    <styled.div
      key="1"
    >
      <Styled(Link)
        $active={false}
        disabled={false}
        to="/datasource/1/preview"
      >
        <Component
          customStyles={
            Object {
              "height": 30,
              "width": 30,
            }
          }
          id="fieldsBtn"
        />
      </Styled(Link)>
      <styled.div>
        <MemoizedFormattedMessage
          defaultMessage="Fields"
          id="shared.components.dataSourceNavigation.preview"
        />
      </styled.div>
    </styled.div>
    <styled.div
      key="2"
    >
      <Styled(Link)
        $active={false}
        disabled={false}
        to="/datasource/1/steps"
      >
        <Component
          customStyles={
            Object {
              "height": 35,
              "marginTop": 1,
              "width": 35,
            }
          }
          id="stepsBtn"
        />
      </Styled(Link)>
      <styled.div>
        <MemoizedFormattedMessage
          defaultMessage="Steps"
          id="shared.components.dataSourceNavigation.steps"
        />
      </styled.div>
    </styled.div>
    <styled.div
      key="3"
    >
      <Styled(Link)
        $active={false}
        disabled={false}
        to="/datasource/1/result"
      >
        <Component
          customStyles={
            Object {
              "height": 35,
              "marginTop": 1,
              "width": 35,
            }
          }
          id="resultsBtn"
        />
      </Styled(Link)>
      <styled.div>
        <MemoizedFormattedMessage
          defaultMessage="Results"
          id="shared.components.dataSourceNavigation.result"
        />
      </styled.div>
    </styled.div>
    <styled.div
      key="4"
    >
      <Styled(Link)
        $active={false}
        disabled={false}
        to="/datasource/1/filters"
      >
        <Component
          customStyles={
            Object {
              "height": 28,
              "width": 28,
            }
          }
          id="filtersBtn"
        />
      </Styled(Link)>
      <styled.div>
        <MemoizedFormattedMessage
          defaultMessage="Filters"
          id="shared.components.dataSourceNavigation.filters"
        />
      </styled.div>
    </styled.div>
    <styled.div
      key="5"
    >
      <Styled(Link)
        $active={false}
        disabled={false}
        to="/datasource/1/tag"
      >
        <Component
          customStyles={
            Object {
              "height": 30,
              "width": 30,
            }
          }
          id="tagsBtn"
        />
      </Styled(Link)>
      <styled.div>
        <MemoizedFormattedMessage
          defaultMessage="Tags"
          id="shared.components.dataSourceNavigation.tag"
        />
      </styled.div>
    </styled.div>
    <styled.div
      key="6"
    >
      <Styled(Link)
        $active={false}
        disabled={false}
        to="/datasource/1/state"
      >
        <Component
          customStyles={
            Object {
              "height": 30,
              "width": 30,
            }
          }
          id="statesBtn"
        />
      </Styled(Link)>
      <styled.div>
        <MemoizedFormattedMessage
          defaultMessage="States"
          id="shared.components.dataSourceNavigation.state"
        />
      </styled.div>
    </styled.div>
    <styled.div
      key="7"
    >
      <Styled(Link)
        $active={false}
        disabled={false}
        to="/datasource/1/metadata"
      >
        <Component
          customStyles={
            Object {
              "height": 30,
              "width": 30,
            }
          }
          id="metaDataBtn"
        />
      </Styled(Link)>
      <styled.div>
        <MemoizedFormattedMessage
          defaultMessage="Metadata"
          id="shared.components.dataSourceNavigation.metadata"
        />
      </styled.div>
    </styled.div>
  </styled.div>
</styled.div>
`;
